Проверка корректности всех файлов

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>С чистого листа</title>
     <link
-      href="\Users\man35\Documents\s-chistogo-lista-review\styles\sChistogoListaStyle.css"
+      href="\Users\man35\Documents\s-chistogo-lista-review\styles\style.css"
+      rel="stylesheet"
+    />
+    <link
+      href="\Users\man35\Documents\s-chistogo-lista-review\fonts\fonts.css"
       rel="stylesheet"
     />
   </head>
@@ -119,6 +123,16 @@
             глупость, и вообще всё, что вы сделаете, — будет неправильно.
           </li>
         </ul>
+      </section>
+      <section class="reasons content-section content-section_theme_dark">
+        <h2 class="content-section__subtitle_dark">
+          <span class="accent-span text-right">Как всё-таки начать</span>
+          <span class="accent-span">что-то делать</span>
+        </h2>
+        <p class="content-section__introduction_dark">
+          Чаще всего страх чистого листа появляется не из-за чего-то одного, а
+          из-за совокупности нескольких факторов. Вот что может помочь:
+        </p>
       </section>
       <section
         class="how-to content-section content-section_theme_dark"
