--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header content-section content-section_theme_dark">
     <a class="header__logo" href="#">
-      <img class="eader__logo-image" alt="Лого" src="./images/logo.svg" />
+      <img class="header__logo-image" alt="Лого" src="./images/logo.svg" />
     </a>
     <nav class="header__menu">
       <ul class="header__menu-list">
