--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>С чистого листа</title>
-  <link href="./styles/style.css" rel="stylesheet" />
-  <link href="./fonts/fonts.css" rel="stylesheet" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>С чистого листа</title>
+    <link href="./styles/style.css" rel="stylesheet" />
+    <link href="./fonts/fonts.css" rel="stylesheet" />
+  </head>
 <body>
   <header class="header content-section content-section_theme_dark">
     <a class="header__logo" href="#">
@@ -111,98 +111,96 @@
         <span class="accent-span text-right">Как всё-таки начать</span>
         <span class="accent-span">что-то делать</span>
       </h2>
-      <p class="content-section__introduction_dark">
+      <p class="content-section__introduction">
         Чаще всего страх чистого листа появляется не из-за чего-то одного, а
         из-за совокупности нескольких факторов. Вот что может помочь:
       </p>
-    </section>
-    <section class="how-to content-section content-section_theme_dark">
-              <ul class="cards-list">
-          <li class="cards-list-item">
-            <article class="card card_theme_dark">
-              <div class="card__author">
-                <img
-                  class="card__author-foto"
-                  src="./images/polyarinov.png"
-                  width="100"
-                  height="100"
-                  alt="Алексей Поляринов"
-                />
-                <p class="card__author-name">Алексей Поляринов</p>
-              </div>
-              <div class="card__content">
-                <h3 class="card__title">Начать любыми словами</h3>
-                <p class="card__text">
-                  Любыми — без шуток. Если не
-                  верите нам, посмотрите, например,
-                  чем открывается эссе
-                  Алексея Поляринова «Чарли
-                  Кауфман: расширение
-                  пространства». Можно и менее
-                  радикально. Главное, чтобы
-                  пустую страницу начали
-                  заполнять символы. Получится
-                  своеобразная ловушка для мозга:
-                  он видит, что вы уже начали что-то
-                  делать, и ему становится легче
-                  войти в состояние потока.
-                </p>
-              </div>
-            </article>
-          </li>
-          <li class="cards-list-item">
-            <article class="card card_theme_bright card_text-only">
-              <div class="card__content">
-                <h3 class="card__title">
-                  Поставить перед собой рамку для фотографии
-                </h3>
-                <p class="card__text">
-                  Самую обычную: 10 на 15
-                  сантиметров. Уже от одного
-                  ощущения,что предстоит работа
-                  над большой и сложной задачей,
-                  может пропасть всякое желание
-                  за неё браться. В такие моменты
-                  хорошо помогает загнать задачу в
-                  рамки — в прямом смысле.
-                  Сосредоточьтесь на том, чтобы
-                  заполнить только пространство
-                  10х15 сантиметров. Что дальше —
-                  пока неважно.
-                </p>
-              </div>
-            </article>
-          </li>
-          <li class="cards-list-item">
-            <article class="card card_theme_dark">
-              <div class="card__author">
-                <img
-                  class="card__author-foto"
-                  src="./images/bunin.png"
-                  width="100"
-                  height="100"
-                  alt="Иван Бунин"
-                />
-                <p class="card__author-name">Иван Бунин</p>
-              </div>
-              <div class="card__content">
-                <h3 class="card__title">Сдалать из задачи рутину</h3>
-                <p class="card__text">
-                  <q
-                    >Писать стихи нужно каждый день, подобно тому как скрипач
-                    или пианист непременно должен каждый день без пропусков по
-                    нескольку часов играть на своём инструменте. В противном
-                    случае ваш талант неизбежно оскудеет, высохнет, подобно
-                    колодцу, откуда долгое время не берут воду. А о чём писать?
-                    О чём угодно. Если у вас в данное время нет никакой темы,
-                    идеи, то пишите просто обо всём, что увидите</q
-                  >, — такой совет своему приятелю дал Иван Бунин. Нет повода
-                  ему не следовать.
-                </p>
-              </div>
-            </article>
-          </li>
-        </ul>
+      <ul class="cards-list">
+        <li class="cards-list-item">
+          <article class="card card_theme_dark">
+            <div class="card__author">
+              <img
+                class="card__author-foto"
+                src="./images/polyarinov.png"
+                width="100"
+                height="100"
+                alt="Фотография Алексея Поляринова"
+              />
+              <p class="card__author-name">Алексей Поляринов</p>
+            </div>
+            <div class="card__content">
+              <h3 class="card__title">Начать любыми словами</h3>
+              <p class="card__text">
+                Любыми — без шуток. Если не
+                верите нам, посмотрите, например,
+                чем открывается эссе
+                Алексея Поляринова «Чарли
+                Кауфман: расширение
+                пространства». Можно и менее
+                радикально. Главное, чтобы
+                пустую страницу начали
+                заполнять символы. Получится
+                своеобразная ловушка для мозга:
+                он видит, что вы уже начали что-то
+                делать, и ему становится легче
+                войти в состояние потока.
+              </p>
+            </div>
+          </article>
+        </li>
+        <li class="cards-list-item">
+          <article class="card card_theme_bright card_text-only">
+            <div class="card__content">
+              <h3 class="card__title">
+                Поставить перед собой рамку для фотографии
+              </h3>
+              <p class="card__text">
+                Самую обычную: 10 на 15
+                сантиметров. Уже от одного
+                ощущения,что предстоит работа
+                над большой и сложной задачей,
+                может пропасть всякое желание
+                за неё браться. В такие моменты
+                хорошо помогает загнать задачу в
+                рамки — в прямом смысле.
+                Сосредоточьтесь на том, чтобы
+                заполнить только пространство
+                10х15 сантиметров. Что дальше —
+                пока неважно.
+              </p>
+            </div>
+          </article>
+        </li>
+        <li class="cards-list-item">
+          <article class="card card_theme_dark">
+            <div class="card__author">
+              <img
+                class="card__author-foto"
+                src="./images/bunin.png"
+                width="100"
+                height="100"
+                alt="Фотография Ивана Бунина"
+              />
+              <p class="card__author-name">Иван Бунин</p>
+            </div>
+            <div class="card__content">
+              <h3 class="card__title">Сдалать из задачи рутину</h3>
+              <p class="card__text">
+                <q
+                  >Писать стихи нужно каждый день, подобно тому как скрипач
+                  или пианист непременно должен каждый день без пропусков по
+                  нескольку часов играть на своём инструменте. В противном
+                  случае ваш талант неизбежно оскудеет, высохнет, подобно
+                  колодцу, откуда долгое время не берут воду. А о чём писать?
+                  О чём угодно. Если у вас в данное время нет никакой темы,
+                  идеи, то пишите просто обо всём, что увидите</q
+                >, — такой совет своему приятелю дал Иван Бунин. Нет повода
+                ему не следовать.
+              </p>
+            </div>
+          </article>
+        </li>
+      </ul>
     </section>
   </main>
   <footer class="content-section content-section_theme_dark footer">
